# dyblog

./: LICENSE  README.md
American Closed Form Solution/: CMakeLists.txt  am_option_test.cpp  baw.cpp  baw.h  bi_norm_dist.cpp  bi_norm_dist.h  bjerk1993.cpp  bjerk1993.h  bjerk2002.cpp  bjerk2002.h  bsm.cpp  bsm.h  crr.cpp  crr.h  juzhong.cpp  juzhong.h  norm_dist.h
OTS/clickhouse_client/: CMakeLists.txt  main.cpp
OTS/ctpfuture_quote_engine/: CMakeLists.txt  atomicops.h  create_folder.cpp  create_folder.h  ctp_quote_api.cpp  ctp_quote_api.h  ctpfuture_quote_engine.cpp  encoding.h  logger.cpp  logger.h  nanotimestamp.cpp  nanotimestamp.h  readerwriterqueue.h  test.py
OTS/ctpfuture_quote_engine/python_script/: main.py  output.cpp  table.sql
OTS/ctpfuture_static_data/: CMakeLists.txt  create_folder.h  ctpfuture_client.cpp  encoding.h  error.dtd  error.xml  logger.h  test.py
OTS/lockfree_queue/: CMakeLists.txt  main.cpp
OTS/nanotime/: CMakeLists.txt  main.cpp  nanotimestamp.cpp  nanotimestamp.h
OTS/pynanotime/: CMakeLists.txt  nanotimestamp.cpp  nanotimestamp.h  pynanotime.cpp
OTS/pynanotime/pytest/: test.py
OTS/spdlog_logger/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
PyShmKV/pyshmkv/: CMakeLists.txt  logger.h  process_mutex.cpp  pyshmkv.cpp  shmkv.h  skv_config.h  skv_shm.h
PyShmKV/pyshmkv/python/: pyshmkv.py  test.store
PyShmKV/shmkv/: CMakeLists.txt  encoding.h  interface.h  logger.h  main.cpp  mman.c  mman.h  process_mutex.h  skv_data.h  skv_store.h
Tensor Ridge Regression/: Tesnor Ridge Regression 与多信息源因子 Ver 1.2.md
Volatility and Correlation/: HS300.xlsx  Note-1 HV算法校对.ipynb  Note-2 不同算法的时间序列对比.ipynb  Note-3 波动率算法收敛速度估计-数据生成.ipynb  Note-4 波动率算法收敛速度估计-修改隔日.ipynb  test_pyvc_function.py
Web Framework/: generate_web_config.py
Web Framework/flask/: logger.py  main.py  readme.txt  requirements.txt
Web Framework/vue/: README.md  package-lock.json  package.json  run_dev.bat  run_node.bat  run_web_server.js
Web Framework/vue/src/: App.vue  main.js
Web Framework/vue/src/assets/css/: global.css
Web Framework/vue/src/assets/vxe/: vxetable.scss
Web Framework/vue/src/components/: EditableCell.vue  Home.vue  Login.vue  Welcome.vue
Web Framework/vue/src/config/: demo.json  left_menu.json
Web Framework/vue/src/plugins/: element.js  v_charts.js
Web Framework/vue/src/router/: index.js
Web Framework/vue/src/views/test/: test.vue
Wing-Model隐含波动率模型/: Wing-Model示意图.ipynb  wing_model.py
yijinjing/learn_yijinjing/: CMakeLists.txt  main.cpp
yijinjing/learn_yijinjing/src/paged/: PageEngine.cpp
yijinjing/yijinjing/: CMakeLists.txt  create_folder.h  main.cpp
yijinjing/yijinjing/yijinjing/include/yijinjing/journal/: Frame.hpp  FrameHeader.h  IJournalVisitor.h  Journal.h  JournalHandler.h  JournalReader.h  JournalWriter.h  Page.h  PageCommStruct.h  PageHeader.h  PageProvider.h  PageSocketHandler.h  PageSocketStruct.h  PageUtil.h  Timer.h
yijinjing/yijinjing/yijinjing/include/yijinjing/paged/: PageEngine.h  PageServiceTask.h
yijinjing/yijinjing/yijinjing/include/yijinjing/utils/: Hash.hpp  YJJ_DECLARE.h  constants.h
yijinjing/yijinjing/yijinjing/journal/: Journal.cpp  JournalHandler.cpp  JournalReader.cpp  JournalWriter.cpp  LocalPageProvider.cpp  Page.cpp  PageUtil.cpp  Timer.cpp
yijinjing/yijinjing/yijinjing/paged/: PageEngine.cpp  PageServiceTask.cpp
